[package]
name = "kv-storage"
version = "0.1.0"
edition = "2024"
description = "Rust toolkit library(logger, time, painc handle)"
license = "MIT"   
authors = ["yaobos@outlook.com"]  
repository = "https://github.com/yaobo-lab/kv-storage"

[dependencies]
serde = "1.0.225"
serde_json = "1.0.145"
convert = { package = "box-convert", version = "0.1", features = ["bytesize"] }
sled = { version = "0.34" }
bincode = "1.3"
async-trait = "0.1.89"
anyhow = "1.0.99"
chrono = "0.4.42"
log = "0.4.28"
tokio = { version = "1.44",  default-features = false, features = ["macros","sync","time", "rt-multi-thread", "signal"] }

[features]
default = ["ttl","len","map_len"]  
ttl = []
len = []
map_len=[]